@@ -102,14 +102,18 @@ typedef Inspector* (*InspectCtor)(Module*);
 typedef void (*InspectDtorFunc)(Inspector*);
 typedef void (*InspectFunc)();
 typedef class Session* (*InspectSsnFunc)(class Flow*);
+typedef struct ContentBuffer* (*InspectBufFunc)(unsigned);
 
 // FIXIT ensure all provide stats
 struct InspectApi
 {
     BaseApi base;
     InspectorType type;
-    const char* service;   // nullptr when type != IT_SERVICE
     uint16_t proto_bits;
+    const char* service;   // nullptr when type != IT_SERVICE
+
+    // list of thread local detection buffers captured by inspector
+    const char* contents;  // space separated, eg "foo_a foo_b foo_c" 
 
     // main thread funcs - parse time data only
     InspectFunc init;      // allocate process static data
@@ -124,6 +128,7 @@ struct InspectApi
     InspectFunc sum;       // accumulate stats
     InspectFunc stats;     // output stats
     InspectFunc reset;     // clear stats
+    InspectBufFunc getbuf; // 0-based, eg getbuf(1) means foo_b above
 };
 
 #endif
