@@ -1031,8 +1031,9 @@ static const InspectApi sp_api =
         mod_dtor
     },
     IT_PROTOCOL,
-    nullptr, // service
     PROTO_BIT__IP|PROTO_BIT__ICMP|PROTO_BIT__TCP|PROTO_BIT__UDP,  // FIXIT dynamic assign
+    nullptr, // service
+    nullptr, // contents
     sp_init,
     nullptr, // term
     sp_ctor,
@@ -1042,7 +1043,8 @@ static const InspectApi sp_api =
     nullptr, // ssn
     sp_sum,
     sp_stats,
-    sp_reset
+    sp_reset,
+    nullptr  // getbuf
 };
 
 #ifdef BUILDING_SO
