@@ -672,6 +672,18 @@ static void hs_reset()
 
 //-------------------------------------------------------------------------
 
+static const char* contents =
+    "http_client_body "
+    "http_cookie "
+    "http_raw_cookie "
+    "http_header "
+    "http_raw_header "
+    "http_method "
+    "http_uri "
+    "http_raw_uri  "
+    "http_stat_code "
+    "http_stat_msg ";
+
 static const InspectApi hs_api =
 {
     {
@@ -683,8 +695,9 @@ static const InspectApi hs_api =
         mod_dtor
     },
     IT_SERVICE,
-    "http",
     PROTO_BIT__TCP,
+    "http",
+    contents,
     hs_init,
     hs_term,
     hs_ctor,
@@ -694,7 +707,8 @@ static const InspectApi hs_api =
     nullptr, // ssn
     hs_sum,
     hs_stats,
-    hs_reset
+    hs_reset,
+    nullptr  // getbuf
 };
 
 #ifdef BUILDING_SO
