@@ -121,8 +121,9 @@ static const InspectApi icmp_api =
         mod_dtor
     },
     IT_STREAM,
-    nullptr, // service
     PROTO_BIT__ICMP,
+    nullptr, // service
+    nullptr, // contents
     icmp_init,
     nullptr, // term
     icmp_ctor,
@@ -132,7 +133,8 @@ static const InspectApi icmp_api =
     icmp_ssn,
     icmp_sum,
     icmp_stats,
-    icmp_reset
+    icmp_reset,
+    nullptr  // getbuf
 };
 
 const BaseApi* nin_stream_icmp = &icmp_api.base;
