@@ -168,8 +168,9 @@ static const InspectApi ip_api =
         mod_dtor
     },
     IT_STREAM,
-    nullptr, // service
     PROTO_BIT__IP,
+    nullptr, // service
+    nullptr, // contents
     ip_init,
     nullptr, // term
     ip_ctor,
@@ -179,7 +180,8 @@ static const InspectApi ip_api =
     ip_ssn,
     ip_sum,
     ip_stats,
-    ip_reset
+    ip_reset,
+    nullptr  // getbuf
 };
 
 const BaseApi* nin_stream_ip = &ip_api.base;
