@@ -136,8 +136,9 @@ static const InspectApi udp_api =
         mod_dtor
     },
     IT_STREAM,
-    nullptr, // service
     PROTO_BIT__UDP,
+    nullptr, // service
+    nullptr, // contents
     udp_init,
     nullptr, // term
     udp_ctor,
@@ -147,7 +148,8 @@ static const InspectApi udp_api =
     udp_ssn,
     udp_sum,
     udp_stats,
-    udp_reset
+    udp_reset,
+    nullptr  // getbuf
 };
 
 const BaseApi* nin_stream_udp = &udp_api.base;
